--- a/package.json
+++ b/package.json
@@ -20,30 +20,30 @@
   "author": "Proveniq",
   "license": "PROPRIETARY",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "stripe": "^14.5.0",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4",
     "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
     "cors": "^2.8.5",
-    "node-fetch": "^2.7.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "node-fetch": "^2.7.0",
+    "pg": "^8.11.3",
+    "stripe": "^14.25.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
+    "@types/node-fetch": "^2.6.9",
     "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.7",
-    "@types/cors": "^2.8.17",
-    "@types/node-fetch": "^2.6.9",
-    "typescript": "^5.3.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
