--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,9 @@ PORT=3100
 NODE_ENV=development
 
 # PostgreSQL (Financial Ledger)
-DATABASE_URL=postgresql://proveniq:password@localhost:5432/proveniq_capital
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=proveniq_capital
-DB_USER=proveniq
-DB_PASSWORD=password
+# Supabase/PostgreSQL - Get these from your Supabase project dashboard
+DATABASE_URL=postgres://postgres:[YOUR_PASSWORD]@[YOUR_PROJECT].supabase.co:6543/postgres?sslmode=require
+
 
 # ClaimsIQ Integration
 CLAIMSIQ_BASE_URL=http://localhost:3000
