chore: update env example and package.json

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 # Server
 PORT=3100
 NODE_ENV=development
+ADMIN_API_KEY=your_admin_api_key
 
 # PostgreSQL (Financial Ledger)
 # Supabase/PostgreSQL - Get these from your Supabase project dashboard
@@ -19,6 +20,10 @@ CLAIMSIQ_WEBHOOK_SECRET=your_webhook_secret
 STRIPE_SECRET_KEY=sk_test_your_stripe_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
+# Firebase (optional if verifying ID tokens)
+FIREBASE_PROJECT_ID=gen-lang-client-0226043550
+GOOGLE_APPLICATION_CREDENTIALS="C:/Users/Admin1/Desktop/AI Projects/SECRET KEYS/proveniq-tech-service-account.json"
+
 # USDC Mock (Crypto Rails)
 USDC_MOCK_ENABLED=true
 USDC_NETWORK=ethereum-sepolia
@@ -29,4 +34,3 @@ CRITICAL_RESERVE_MINIMUM_CENTS=10000000
 
 # Security
 JWT_SECRET=your_jwt_secret_for_admin_api
-ADMIN_API_KEY=your_admin_api_key
