--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
