--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,14 @@ ADMIN_API_KEY=your_admin_api_key
 # Supabase/PostgreSQL - Get these from your Supabase project dashboard
 DATABASE_URL=postgres://postgres:[YOUR_PASSWORD]@[YOUR_PROJECT].supabase.co:6543/postgres?sslmode=require
 
-
 # ClaimsIQ Integration
-CLAIMSIQ_BASE_URL=http://localhost:3000
+CLAIMSIQ_BASE_URL=http://localhost:3005
 CLAIMSIQ_API_KEY=your_claimsiq_api_key
 CLAIMSIQ_WEBHOOK_SECRET=your_webhook_secret
+
+# PROVENIQ Ecosystem Services
+PROVENIQ_LEDGER_URL=http://localhost:8006/api/v1
+CORE_SERVICE_URL=http://localhost:8000
 
 # Stripe (Fiat Rails)
 STRIPE_SECRET_KEY=sk_test_your_stripe_key
