--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,36 @@ CRITICAL_RESERVE_MINIMUM_CENTS=10000000
 
 # Security
 JWT_SECRET=your_jwt_secret_for_admin_api
+
+# ============================================
+# DATA ARCHITECT AGENT - External APIs
+# ============================================
+
+# Gmail API (Purchase receipts, warranty emails)
+# Get from: https://console.cloud.google.com/apis/credentials
+GMAIL_API_URL=https://gmail.googleapis.com/gmail/v1
+GMAIL_CLIENT_ID=your_gmail_client_id
+GMAIL_CLIENT_SECRET=your_gmail_client_secret
+GMAIL_REDIRECT_URI=http://localhost:3100/api/auth/gmail/callback
+
+# Plaid API (Bank accounts, income verification)
+# Get from: https://dashboard.plaid.com/developers/keys
+PLAID_API_URL=https://sandbox.plaid.com
+PLAID_CLIENT_ID=your_plaid_client_id
+PLAID_SECRET=your_plaid_secret
+PLAID_ENV=sandbox
+
+# eBay API (Seller history, marketplace activity)
+# Get from: https://developer.ebay.com/my/keys
+EBAY_API_URL=https://api.ebay.com
+EBAY_APP_ID=your_ebay_app_id
+EBAY_CERT_ID=your_ebay_cert_id
+EBAY_DEV_ID=your_ebay_dev_id
+
+# LeadsOnline API (Law enforcement - stolen property checks)
+# Get from: LeadsOnline partnership agreement
+LEADS_ONLINE_API_URL=https://api.leadsonline.com
+LEADS_ONLINE_API_KEY=your_leadsonline_api_key
+
+# Ledger (PROVENIQ internal)
+LEDGER_API_URL=http://localhost:8006/api/v1
